5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1643_2711.log
== TEST (2019-04-04 09:39:01) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:40:35) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if =suficiente
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if =suficiente
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:40:59) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
total =suficiente
print(a + b+ c + d + e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total =suficiente
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:42:31) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
total = insuficiente
print(a + b+ c + d + e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = insuficiente
NameError: name 'insuficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:43:36) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:44:02) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if= suficiente
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if= suficiente
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:46:20) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:suficiente 
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if:suficiente 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:46:50) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:("suficiente")
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if:("suficiente")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:49:57) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:(suficiente.upper()
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if:(suficiente.upper()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:50:42) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:(suficiente.upper() == 's')
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if:(suficiente.upper() == 's')
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:53:57) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:("suficiente")
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if:("suficiente")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:54:18) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:("suficiente.upper")
print(a + b+ c + d + e)

-- ERROR:
File "XXXX", line 6
    if:("suficiente.upper")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:54:33) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:("suficiente.upper")
print(a + b + c + d + e)

-- ERROR:
File "XXXX", line 6
    if:("suficiente.upper")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:46:07) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:("suficiente.upper")
print(a + b + c + d + e)

-- ERROR:
File "XXXX", line 6
    if:("suficiente.upper")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:46:31) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))

print(a + b + c + d + e)

-- OUTPUT:
447.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:48:08) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))

print(a + b + c + d + e)

-- EXECUTION TIME:
0.207532
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
447.7
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
158.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:49:07) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:
print(a + b + c + d + e)

-- ERROR:
File "XXXX", line 6
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:49:44) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:(insuficiente)
print(a + b + c + d + e)

-- ERROR:
File "XXXX", line 6
    if:(insuficiente)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:51:42) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if: 
suficiente
print(a + b + c + d + e)

-- ERROR:
File "XXXX", line 6
    if: 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 14:33:13) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:==(suficiente) 
   print(a + b + c + d)

-- ERROR:
File "XXXX", line 6
    if:==(suficiente) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 14:33:47) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:==(*suficiente) 
   print(a + b + c + d)

-- ERROR:
File "XXXX", line 6
    if:==(*suficiente) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 14:33:47) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =float(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if:==(*suficiente) 
   print(a + b + c + d)

-- ERROR:
File "XXXX", line 6
    if:==(*suficiente) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:37:15) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:40:09) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:40:33) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:41:11) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:41:51) 
-- CODE:
a =float(input("o valor que ele tem disponivel: "))
b =(input("a quantidade de tickets do ru que ele deseja comprar: "))
c =float(input("o valor dos tickets: "))
d =float(input("a quantidade de passes de onibus: "))
e =float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:46:31) 
-- CODE:
valor =float(input("o valor que ele tem disponivel: "))
tickets=(input("a quantidade de tickets do ru que ele deseja comprar: "))
valor_tickets =float(input("o valor dos tickets: "))
passes =float(input("a quantidade de passes de onibus: "))
valor_dos_passses =float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:47:36) 
-- CODE:
valor =float(input("o valor que ele tem disponivel: "))
tickets=(input("a quantidade de tickets do ru que ele deseja comprar: "))
valor_tickets =float(input("o valor dos tickets: "))
passes =float(input("a quantidade de passes de onibus: "))
valor_dos_passses =float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- ERROR:
File "XXXX", line 6
    if(valor >= (tickets * valor_tickets + passes * valor_dos_passes):
                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:49:36) 
-- CODE:
valor = float(input("o valor que ele tem disponivel: "))
tickets= int(input("a quantidade de tickets do ru que ele deseja comprar: "))
valor_tickets = float(input("o valor dos tickets: "))
passes = int(input("a quantidade de passes de onibus: "))
valor_dos_passses = float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
NameError: name 'valor_dos_passes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:50:43) 
-- CODE:
valor = float(input("o valor que ele tem disponivel: "))
tickets= int(input("a quantidade de tickets do ru que ele deseja comprar: "))
valor_tickets = float(input("o valor dos tickets: "))
passes = int(input("a quantidade de passes de onibus: "))
valor_dos_passes = float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:51:18) 
-- CODE:
valor = float(input("o valor que ele tem disponivel: "))
tickets= int(input("a quantidade de tickets do ru que ele deseja comprar: "))
valor_tickets = float(input("o valor dos tickets: "))
passes = int(input("a quantidade de passes de onibus: "))
valor_dos_passes = float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- EXECUTION TIME:
0.170413
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:51:24) 
-- CODE:
valor = float(input("o valor que ele tem disponivel: "))
tickets= int(input("a quantidade de tickets do ru que ele deseja comprar: "))
valor_tickets = float(input("o valor dos tickets: "))
passes = int(input("a quantidade de passes de onibus: "))
valor_dos_passes = float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:52:15) 
-- CODE:
valor = float(input("o valor que ele tem disponivel: "))
tickets= int(input("a quantidade de tickets do ru que ele deseja comprar: "))
valor_tickets = float(input("o valor dos tickets: "))
passes = int(input("a quantidade de passes de onibus: "))
valor_dos_passes = float(input("o valor dos passes: "))
if(valor >= (tickets * valor_tickets + passes * valor_dos_passes)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
